add views and app.rb to connect it

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
 <h1 class="jumbotron">Welcome to the Team League</h1>
 <p><a href="/manager">Click here if you are a League Manager</a></p>
-<p><a href="/coordinator">Click here if you are a Team Coordinator</a></p>
+<p><a href="/coordinators">Click here if you are a Team Coordinator</a></p>
